--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -45,10 +45,10 @@
                 </button>
             </div>
         </div>
-    </div> -->
+    </div> 
 
     <p>When you are ready to start, press the button below.</p>
-  <button class="btn btn-primary">Start</button>
+  <button class="btn btn-primary">Start</button> -->
 
 
 <!-- </div>
