--- a/meme_game/ToMemeOrNotToMeme.html
+++ b/meme_game/ToMemeOrNotToMeme.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <!-- 
-   Round {{ subsession.round_number }}, Shoot!
+   Round {{ subsession.round_number }}, Shoot! example taken from rock paper scissors
 -->
 
     {{ for choice in Constants.choices }}
@@ -18,6 +18,7 @@
     {{ if subsession.round_number > 1}}
         {{ include Constants.history_template }}
     {{ endif }}
+    <!-- this is for when i code the feedback on last post  -->
 
 {% endblock %}
 
