kinda working post page

--- a/meme_game/addTags.html
+++ b/meme_game/addTags.html
@@ -47,8 +47,8 @@
         </div>
     </div> 
 
-    <p>When you are ready to start, press the button below.</p>
-  <button class="btn btn-primary">Start</button> -->
+    <p>When you are ready to start, press the button below.</p> -->
+  <button class="btn btn-primary">Continue</button>
 
 
 <!-- </div>
