--- a/meme_game/Posting.html
+++ b/meme_game/Posting.html
@@ -26,27 +26,32 @@
 
 <div class="row">
     <div class="column">
-      <img id='meme-pic1' src= {{ static Image }} alt="Snow" style="width:100%">
+      <img id='meme-shown1' src= {{ static Image }} alt="Snow" style="width:100%">
     </div>
     <div class="column">
-      <img id='meme-pic2' src= {{ static Image }} alt="Forest" style="width:100%">
+      <img id='meme-shown2'  src="{{ static Image2 }}" alt="Forest" style="width:100%">
     </div>
     <div class="column">
-      <img id='meme-pic3' src= {{ static Image }} alt="Mountains" style="width:100%">
+      <img id='meme-shown3' src="{{ static 'HR/meme7.jpg' }}" alt="Mountains" style="width:100%">
     </div>
 </div>
 
 <div class="row">
     <div class="column">
-      <img id='meme-pic4' src= {{ static Image }}  alt="Snow" style="width:100%">
+      <img id='meme-shown4' src= {{ static Image3 }}  alt="Snow" style="width:100%">
     </div>
     <div class="column">
-      <img id='meme-pic5' src= {{ static Image }}  alt="Forest" style="width:100%">
+      <img id='meme-shown5' src= {{ static Image4 }}  alt="Forest" style="width:100%">
     </div>
     <div class="column">
-      <img id='meme-pic6' src= {{ static Image }}  alt="Mountains" style="width:100%">
+      <img id='meme-shown5' src= {{ static Image5 }}  alt="Mountains" style="width:100%">
     </div>
 </div>
+
+<!--if you wanted to choose an specific location inside your computer you would do it like this
+   <div class="column">
+  <img id='meme-shown3' src="{{ static 'HR/meme7.jpg' }}" alt="Mountains" style="width:100%">
+</div> -->
 
 <!-- <div class="meme-body"> 
     <div class="img-wrapper">
@@ -87,7 +92,10 @@
 }
 </style>
 
-<style>
+<button class="btn btn-primary">Continue yooooo</button>
+
+
+<!-- <style>
     .meme-body{
         display: flex;
         flex-direction: column;
@@ -116,9 +124,10 @@
     #dislike {
         padding-left: 1em;
     }
-</style>
+</style> -->
 
-<script>
+
+<!-- <script>
     // Load Treatment
     sTreat = js_vars.sTreat
     
@@ -185,7 +194,7 @@
         </p>
     </div>
 
-</div>
+</div> -->
 
 
 
