--- a/meme_game/ToMemeOrNotToMeme.html
+++ b/meme_game/ToMemeOrNotToMeme.html
@@ -15,10 +15,10 @@
         <button name="iTrialDec" value="{{choice}}">{{choice}}</button>
     {{ endfor }}
 
-    {{ if subsession.round_number > 1}}
+      <!-- {{ if subsession.round_number > 1}}
         {{ include Constants.history_template }}
     {{ endif }}
-    <!-- this is for when i code the feedback on last post  -->
+    this is for when i code the feedback on last post  -->
 
 {% endblock %}
 
