vectorized images,between group allocation, history in 1st page

--- a/meme_game/Posting.html
+++ b/meme_game/Posting.html
@@ -8,39 +8,38 @@
 {% block content %}
 
 
-<!-- NEED TO FIND A WAY TO ALTER PHOTOS :D  I already did hurray me
-Now i need to associate this images to a number and let the player choose (┛ಠ_ಠ)┛彡┻━┻. 
+<!-- need to choose different random images (┛ಠ_ಠ)┛彡┻━┻. 
  src="{{ static Image2 }}"-->
 
 
 <div class="row">
     <div class="column">
       <label>1</label>
-      <img class='lol' id='memeshown1' src= {{ static Image }} value="1" style="width:100%">
+      <img id='memeshown1' src= {{ static Image }} value="1" style="width:100%">
     </div>
     <div class="column">
       <label>2</label>
-      <img class='lol' id='memeshown2' src={{ static Image2 }} value="2" style="width:100%">
+      <img id='memeshown2' src={{ static Image2 }} value="2" style="width:100%">
       
     </div>
     <div class="column">
       <label>3</label>
-      <img class='lol' id='memeshown3' src= {{ static Image3 }} value="3" style="width:100%">
+      <img id='memeshown3' src= {{ static Image3 }} value="3" style="width:100%">
     </div>
 </div>
 
 <div class="row">
     <div class="column">
       <label>4</label>
-      <img class='lol' id='memeshown4' src= {{ static Image4 }}  value="4" style="width:100%">
+      <img id='memeshown4' src= {{ static Image4 }}  value="4" style="width:100%">
     </div>
     <div class="column">
       <label>5</label>
-      <img class='lol' id='memeshown5' src= {{ static Image5 }}  value="5" style="width:100%">
+      <img id='memeshown5' src= {{ static Image5 }}  value="5" style="width:100%">
     </div>
     <div class="column">
       <label>6</label>
-      <img class='lol' id='memeshown6' src= {{ static Image6 }}  value="6" style="width:100%">
+      <img id='memeshown6' src= {{ static Image6 }}  value="6" style="width:100%">
     </div>
 </div>
 
