--- a/meme_game/history.html
+++ b/meme_game/history.html
@@ -9,6 +9,7 @@
     </tr>
     <tr>  
         Your last post received...
+        <img src="{{ static image_path }}"/>
         <td id="whatever">{{ prev_player.round_number }}</td>
         <td>{{ prev_player.iLikes }} <p> &hearts;</p> </td> 
         <td>{{ prev_player.iDislikes }}  </td>
