--- a/meme_game/ToMemeOrNotToMeme.html
+++ b/meme_game/ToMemeOrNotToMeme.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<script>
+<script>     // we create hidden input to measure the time spent in the page
     let dRT          = document.createElement("input");
         dRT.type         = 'hidden';
         dRT.name         = 'dRTDec1';
@@ -15,14 +15,12 @@
         dRT.value        = '';
         var TStart       = new Date().getTime();
         var TEnd         = new Date().getTime();
-    // we create hidden input to measure the time spent in the page
 </script>
     
-<!-- 
-   Round {{ subsession.round_number }}, Shoot! example taken from rock paper scissors
--->
+<ul></ul>
+
     {{ for choice in Constants.choices }}
-        <button name="iTrialDec" value="{{choice}}">{{choice}}</button>
+        <button name="iTrialDec" class="btn effect01" target="_blank" value="{{choice}}">{{choice}}</button>
         <!-- line 24 & 25 form the buttons from the init file -->
 
         <script>
@@ -48,17 +46,155 @@
             });
         });
         </script>
-
-
     {{ endfor }}
-<!-- access the last round feedback only if it's past round 1 and last trial they decided to post 
-&& last == 'Post'-->
-    {{ if subsession.round_number > 1 }} 
-        {{ if prev_player.iTrialDec == 'Post' }} 
-            {{ include Constants.history_template }}
+
+    <!-- &emsp;
+    &emsp; -->
+    <br />
+    <br />
+    <br />
+
+    {{ if subsession.round_number > 1 }} <!-- access the last round feedback only if it's past round 1 -->
+        {{ if prev_player.iTrialDec == 'Post' }}  <!-- and last trial they decided to post -->
+            <h1>{{ dislikes }} people out of 25 did not like your post</h1> 
+
+            <h1>{{ likes }} people out of 25 did not like your post</h1>
+            
+            <p>post {{ roundnumber }}</p>
+            <img style="width:100%" src="{{ static image_path }}"/>
         {{ endif }}
     {{ endif }}
-    <!-- this is for when i code the feedback on last post 
-     -->
+
+<!-- CSS STYLE FOR THE BUTTONS -->
+
+<style>
+* {
+    margin: 0;
+    padding: 0;
+  }
+  
+  html,
+  /* body {
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+  } */
+  
+  body {
+    background: #FFF;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: 400;
+  }
+  
+  .buttons {
+    display: flex;
+    flex-direction: row;
+        flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+  /*   padding: 2em 0em; */
+  }
+  
+  .container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: #FFF;
+    padding:  40px 0px;
+    width: 500px;
+  }
+  
+  h1 {
+    text-align: left;
+    color: #444;
+    letter-spacing: 0.05em;
+    margin: 0 0 0.4em;
+    font-size: 1em;
+  }
+  
+  p {
+    text-align: left;
+    color: #444;
+    letter-spacing: 0.05em;
+    font-size: 0.8em;
+    margin: 0 0 2em;
+  }
+  
+  
+  .btn {
+    letter-spacing: 0.1em;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 45px;
+    max-width: 160px;
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    width: 100%;
+  }
+  .btn:hover {
+    text-decoration: none;
+  }
+  
+  /*btn_background*/
+  .effect01 {
+    color: #FFF;
+    border: 4px solid #000;
+    box-shadow:0px 0px 0px 1px #000 inset;
+    background-color: #000;
+    overflow: hidden;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+  }
+  .effect01:hover {
+    border: 4px solid #666;
+    background-color: #FFF;
+    box-shadow:0px 0px 0px 4px #EEE inset;
+  }
+  
+  /*btn_text*/
+  .effect01 span {
+    transition: all 0.2s ease-out;
+    z-index: 2;
+  }
+  .effect01:hover span{
+    letter-spacing: 0.13em;
+    color: #333;
+  }
+  
+  /*highlight*/
+  .effect01:after {
+    background: #FFF;
+    border: 0px solid #000;
+    content: "";
+    height: 155px;
+    left: -75px;
+    opacity: .8;
+    position: absolute;
+    top: -50px;
+    -webkit-transform: rotate(35deg);
+            transform: rotate(35deg);
+    width: 50px;
+    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);/*easeOutCirc*/
+    z-index: 1;
+  }
+  .effect01:hover:after {
+    background: #FFF;
+    border: 20px solid #000;
+    opacity: 0;
+    left: 120%;
+    -webkit-transform: rotate(40deg);
+            transform: rotate(40deg);
+  }
+</style>
+
+
+
 
 {% endblock %}
