added draft of instructions and questionnaire, css formatting

--- a/instructions/old_consent.html
+++ b/instructions/old_consent.html
@@ -66,8 +66,6 @@ Formal complaints about this study can be addressed to the Faculty (FMG) Ethics 
 </p><p style="color:blue">
 Thank you, </p>
 <p style="color:blue">
-David Amodio (D.M.Amodio@uva.nl)</p>
-<p style="color:blue">
 Björn Lindström (b.r.lindstrom@uva.nl) </p>
 <p style="color:blue">
 David Schultner (d.t.schultner@uva.nl)
@@ -82,7 +80,7 @@ David Schultner (d.t.schultner@uva.nl)
                 <br>
 
                 <center>
-                    <button type="button" class="btn btn-primary btn-lg" onClick="window.location='/exp?hitId={{ hitid }}&assignmentId={{ assignmentid }}&workerId={{ workerid }}'">
+                    <button type="button" class="btn btn-primary btn-lg">
                     <span class="glyphicon glyphicon-ok"></span> I agree 
                     </button>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
