--- a/instructions/consent.html
+++ b/instructions/consent.html
@@ -1,5 +1,4 @@
-<!-- {{ block title }}
-  should i include title-->
+
 {{ block content }}
 
 <img src="{{ static 'UvA.jpeg' }}" class="center"/>
@@ -14,41 +13,32 @@
 
 
 <p>
-<br>
-Welcome!
-First of all, thank you for deciding to participate in this experiment.
+<br>Welcome! 
+<br>First of all, thank you for deciding to participate in this experiment.
 
 <br><br>
-This experiment is part of a Master's thesis of the Neuroeconomics track of Business Economics at the University of Amsterdam (UvA). 
-It is conducted by Lian Jongejan, with the supervision of Alejandro Hirmas (Phd Candidate, UvA). 
+This study is part of a Master's thesis in Neuroeconomics at the University of Amsterdam (UvA). 
+It is conducted by Violeta Céspedes with the supervision of Alejandro Hirmas Frisius. 
+Your participation in this study will require approximately 15 – 20 minutes, please make sure that you have sufficient time to complete it.
 
 <br><br>
-
 In this study, we want to learn more about how people behave on social media.
-If you have any questions concerning this study, please feel free to contact me (violeta.cespedes@live.com). 
 
 <br><br>
-Your participation in this study will require approximately 15 – 20 minutes. 
+At the end of the study, several demographic questions will be asked for statistical purposes. Your identity will remain completely anonymous. 
 All information you provide will remain confidential and will not be associated with your name. 
-If you complete the full experiment and read the instructions carefully, you might earn a substantial amount of money. 
-If you want to have a chance to receive your payment, please fill in your email address on the last page of the experiment.
-After data gathering, a few participants will be randomly selected and paid according to their outcomes.  
-Any identifying information collected in the study will be deleted after data collection is complete. 
-
+Any identifying information collected in the study will be deleted after data collection is complete.
+Your personal information (about who you are) remains confidential and will not be shared without your explicit consent. Your research data will be analyzed by the researchers that collected the information. Research data that are published in scientific journals will be anonymous and cannot be traced back to you as an individual. 
+Completely anonymized data can be made publicly accessible, but your identity will under no circumstance be identifiable. 
 <br><br>
 
-To ensure confidentiality of the data, data will be processed in a coded way. 
-Your personal information will not be published. 
-The outcomes of this study may be used for scientific publications, or be shared with other researches, 
-but your identity will under no circumstance be identifiable. 
-If you have any questions or concerns about privacy, please contact Lian Jongejan (lian.jongejan@student.uva.nl).
+If you have any questions about this study or concerns about privacy, please feel free to contact me (violeta.cespedes@live.com). 
 
 <br><br>
-
-Important note: it is <b>not possible</b> to participate in this study using a smartphone.
+Important note: it is <b>not possible</b> to participate in this study using a smartphone. You must use a laptop/computer.
 
 <br><br>
-By clicking the button below, you acknowledge that your participation in the study is voluntary, you are over 18 years of age, 
+By clicking the button below, you acknowledge that your participation in the study is voluntary, you are over 16 years of age, 
 and that you are aware that you may choose to terminate your participation in the study at any time and for any reason.
 {{formfields}}
 
