--- a/instructions/instruct_0.html
+++ b/instructions/instruct_0.html
@@ -1,11 +1,16 @@
 {{ block content }}
-<p>In this study, you will interact within a mimic of a social media platform.
-    You will have the option to blabalbalba
-with other people ("Users") in real-time on a simple platform meant to resemble aspects of social media (for example, Instagram).</p>
+<p>In this study, you will be interacting with a platform that is meant to resemble aspects of social media (for example, Instagram).</p>
 <br>
-<p> Both you and the other Users are completely anonymous. This study will take approximately 30 minutes.</p>
+<p>You can either post “Memes” (humorous pictures) or see and rate Memes posted by other Users in the Feed. 
 
-When you're ready to continue, press <strong>Next</strong>.	
+In an earlier part of this study, these memes were rated with a like or dislike by 40 independent participants.
+Thus, the feedback you will receive for your posts is <strong>real</strong>. 
+This feedback will be displayed to you in the form of likes or dislikes, after you select to post.
+
+You rate the Memes posted by other Users by giving them a like or a dislike. </p>
+
+<!-- When you're ready to continue, press <strong>Next</strong>.	
+make buttons pretty? -->
 <br>
 <br>
 <br>
