--- a/instructions/instruct_1.html
+++ b/instructions/instruct_1.html
@@ -1,10 +1,11 @@
 {{ block content }}
-<p>In the study, you can post “Memes” (humorous pictures) and rate Memes posted by the other Users. 
-You rate the Memes posted by other Users by giving a “Like” if you enjoy someone’s post. 
-If you do not enjoy it, you can just wait for another User's post. In turn, other Users can Like your posts.</p>
+<p>You can post Memes whenever you want. Each time you decide to post a Meme, you select among a set of six potentially funny, interesting or relatable Meme pictures. 
+    Please select the Meme you like the best and that you think the others will like as well.</p>
 <br>
-
-<p>You can post Memes whenever you want. Each time you decide to post a Meme, you select among a set of potentially funny, interesting or relatable Meme pictures. Please select the Meme you like the best and that you think the others will like as well.</p>
+<p>
+    After you have selected a Meme, you are asked to add three informative "tags" (short keywords) related to this Meme. These tags will be used in a future study.
+    It is therefore important that your tags are as clear and descriptive as possible. 
+    However, this is not required to post an image. You are free to do this step as you would be in real social media.</p>
 
 <button class="btn btn-primary">thank u, next</button>
 {{ endblock }}
