--- a/instructions/instruct_3.html
+++ b/instructions/instruct_3.html
@@ -1,8 +1,8 @@
 {{ block content }}
-<p>After you have selected the tags, your post is ready and will be shown to the other Users. Now each of the other Users have the opportunity to Like your post if they want to.
-</p>
-<br>
-<p>When all other Users have decided whether or not they Like your post, you will see the number of Likes your post received. The maximum number of Likes a post can receive is 40 (that is, 1 Like per User).</p>
+<p>In summary, you can post Memes yourself and rate Memes posted by the other Users. You can post your own Memes whenever and as often as you want, and Like the Memes posted by other Users. 
+Feel free to try out the different possibilities.</p>
+When you are ready to begin the real experiment, press the button below. (◕ᴗ◕✿)  
 <br /><br />
-<button class="btn btn-primary">thank u, next</button>
+<button class="btn btn-primary">I was born ready</button>
 {{ endblock }}
+
