--- a/instructions/instruct_2.html
+++ b/instructions/instruct_2.html
@@ -1,9 +1,7 @@
 {{ block content }}
-<p>After you have selected a Meme, you are asked to add three informative "tags" (short keywords) related to this Meme. These tags will be used in a future study.
-</p>
-<br>
-
-<p>It is therefore important that your tags are as clear and descriptive as possible.</p>
+<p>After you have selected the tags, your post is ready and you will see the real feedback associated with the image.</p>
+<p> The maximum number of Likes or Dislikes a post can receive is 40 (that is, 1 Like or Dislike per User).</p>
+<p>After you have seen the feedback, you will also be asked to report your emotional status.</p>
 <br /><br />
 <button class="btn btn-primary">thank u, next</button>
 {{ endblock }}
